--- a/src/app/adminPage/admin/admin.component.html
+++ b/src/app/adminPage/admin/admin.component.html
@@ -28,4 +28,26 @@
   <div>
     <router-outlet></router-outlet>
   </div>
+  
 </div>
+<div class="footer">
+    <div class="firstColumn">
+      <div class="phone">
+        <i class="fas fa-phone"></i>
+        <span> (+84) 12.345.678</span>
+      </div>
+      <div class="mail">
+        <i class="fas fa-envelope"></i>
+        <span> VinID@gmail.com</span>
+      </div>
+    </div>
+    <div class = "secondColumn">
+      <div>
+          <span>Địa chỉ: Tập đoàn Vingroup số 7 Đường Bằng Lăng 1, Việt Hưng, Quận Long Biên, Hà Nội</span> 
+  
+      </div>
+        <div>
+            Mã số doanh nghiệp: 0108372860. Ngày cấp: 23/07/2018. Nơi cấp: Phòng đăng ký kinh doanh - thành phố Hà Nội
+        </div>
+    </div>
+  </div>
