--- a/src/app/HomePage/car/car.component.css
+++ b/src/app/HomePage/car/car.component.css
@@ -35,3 +35,18 @@ body{
   background-size:cover ;
   width:100%;
 }
+
+.btn-danger {
+  background: red;
+  padding: 5px;
+  color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.btn-normal{
+  background: green;
+  padding: 5px;
+  color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+}
