--- a/src/app/HomePage/home/home.component.css
+++ b/src/app/HomePage/home/home.component.css
@@ -14,3 +14,44 @@
 .header .Title{
     cursor: pointer;
 }
+
+.footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #5968de;
+    color: white;
+    /* text-align: start; */
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .icon {
+    width: 10em;
+    height: 10em;
+  }
+
+  .footer .firstColumn div{
+    padding: 10px;
+    padding-left: 80px;
+  }
+
+ 
+
+  .footer .secondColumn div{
+    padding: 10px;
+  }
+
+  .header .comment button{
+      margin: 10px;
+  }
+
+  ul li button{
+    border-radius: 10px;
+  }
+
+  ul li{
+    padding-top: 27px;
+  }
