--- a/src/app/adminPage/product-list/product-list.component.html
+++ b/src/app/adminPage/product-list/product-list.component.html
@@ -1,8 +1,7 @@
-<div class="header">
-  <h1>Product List</h1>
-</div>
-
 <body>
+  <div class="header">
+    <h1>Product List</h1>
+  </div>
   <div class="filterAndAdd">
     <mat-form-field>
       <input
@@ -21,7 +20,7 @@
     </button>
   </div>
 
-  <div class="shadow p-3 mb-5 bg-white rounded">
+  <div class="table1">
     <table mat-table [dataSource]="dataSource">
       <!-- Position Column -->
       <ng-container matColumnDef="id">
@@ -51,8 +50,17 @@
           {{ element.priceStart | currency: "USD" }}
         </td>
       </ng-container>
+
+      <ng-container matColumnDef="Picture" class="Picture">
+        <th mat-header-cell *matHeaderCellDef>Picture</th>
+        <td mat-cell *matCellDef="let element">
+          <img
+            style="height: 200px; width: 200px; object-fit: contain"
+            src="{{ element.productImage }}"
+          />
+        </td>
+      </ng-container>
       <!-- Weight Column -->
-      
 
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
@@ -76,15 +84,13 @@
             >create</mat-icon
           >
           <mat-icon
-                aria-hidden="false"
-                aria-label="Example home icon"
-                (click)="onDelete(element.id - 1)"
-                >delete</mat-icon
-              >
+            aria-hidden="false"
+            aria-label="Example home icon"
+            (click)="onDelete(element.id - 1)"
+            >delete</mat-icon
+          >
         </td>
       </ng-container>
-
-
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
