--- a/src/app/adminPage/user-list/user-list.component.css
+++ b/src/app/adminPage/user-list/user-list.component.css
@@ -45,13 +45,12 @@ th{
 }
 
 button{
-  padding-top:0px;
-  padding-bottom: 0px;
   height: 40px;
-
+  margin:15px ;
 }
 
 mat-icon {
   padding-right: 40px;
   /* max-width: 400px; */
 }
+
