--- a/src/app/dialog/confirm-delete/confirm-delete.component.html
+++ b/src/app/dialog/confirm-delete/confirm-delete.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Are you sure want to delete ?</h1>
+<span mat-dialog-title>Are you sure want to delete ?</span>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
     <button mat-button [mat-dialog-close]="1">Ok</button>
