--- a/src/app/dialog/dialog-edit-product/dialog-edit-product.component.html
+++ b/src/app/dialog/dialog-edit-product/dialog-edit-product.component.html
@@ -62,8 +62,21 @@
       <input
         class="form-control form-control-sm"
         matInput
-        type="text"
+        type="number"
         formControlName="priceStart"
+      />
+    </mat-form-field>
+
+    <label>
+      Buy Price:
+    </label>
+
+    <mat-form-field>
+      <input
+        class="form-control form-control-sm"
+        matInput
+        type="number"
+        formControlName="buyPrice"
       />
     </mat-form-field>
 
