--- a/src/app/HomePage/home/home.component.css
+++ b/src/app/HomePage/home/home.component.css
@@ -1,57 +1,77 @@
-.header{
-    display: flex;
-    justify-content: space-between;
+.header {
+  display: flex;
+  justify-content: space-between;
 
-    list-style-type: none;
-    background-image: url("image/header.jpg");
-    color: orange;
+  list-style-type: none;
+  background-image: url("image/header.jpg");
+  color: #eb4034;
 }
 
-.header .comment{
-    padding: 25px 20px;
+.header .comment {
+  padding: 25px 20px;
 }
 
-.header .Title{
-    cursor: pointer;
+.header .Title {
+  cursor: pointer;
 }
 
 .footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 80px;
-    background-color: #5968de;
-    color: white;
-    /* text-align: start; */
-    display: flex;
-    justify-content: space-around;
-  }
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  background-color: #5968de;
+  color: white;
+  /* text-align: start; */
+  display: flex;
+  justify-content: space-around;
+}
 
-  .icon {
-    width: 10em;
-    height: 10em;
-  }
+.icon {
+  width: 10em;
+  height: 10em;
+}
 
-  .footer .firstColumn div{
-    padding: 10px;
-    padding-left: 80px;
-  }
+.footer .firstColumn div {
+  padding: 10px;
+  padding-left: 80px;
+}
 
- 
+.footer .secondColumn div {
+  padding: 10px;
+}
 
-  .footer .secondColumn div{
-    padding: 10px;
-  }
+.header .comment  {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 250px;
+}
 
-  .header .comment button{
-      margin: 10px;
-  }
+ul li button {
+  border-radius: 10px;
+  /* padding: 10px; */
+}
 
-  ul li button{
-    border-radius: 10px;
-  }
+ul li {
+  padding-top: 20px;
+}
 
-  ul li{
-    padding-top: 27px;
-  }
+ul li .mat-icon {
+  color: white;
+  cursor: pointer;
+  /* margin-top: 30px */
+}
+
+div .carousel-inner .carousel-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+div .carousel-inner .carousel-item {
+  max-height: 130px;
+}
+.active {
+  background: #9898d6;
+}
