--- a/src/app/adminPage/user-list/user-list.component.html
+++ b/src/app/adminPage/user-list/user-list.component.html
@@ -93,5 +93,9 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+
+    <!-- <div class="card-footer pb-0 pt-3">
+      <jw-pagination [items]="element" (changePage)="onChangePage($event)"></jw-pagination>
+  </div> -->
   </div>
 </body>
