--- a/src/app/dialog/bidding/bidding.component.html
+++ b/src/app/dialog/bidding/bidding.component.html
@@ -1,6 +1,6 @@
 <span mat-dialog-title>Your wallet value: 10000$</span>
-<span mat-dialog-title>Current Price: {{data.price1}}</span>
-<span mat-dialog-title>Min value to bid: 4200$</span>
+<span mat-dialog-title>Current Price: {{data.biddingPrice}}</span>
+<span mat-dialog-title>Min value to bid: {{minPrice| currency: "USD"}}</span>
 <div [formGroup]="profileForm" class="form">
   <label>
     Money to bid:
@@ -16,6 +16,6 @@
   </mat-form-field>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button [mat-dialog-close]="1">Ok</button>
+    <button mat-button (click) = "onYesClick()" [mat-dialog-close]="1">Ok</button>
   </div>
 </div>
