--- a/src/app/dialog/buy/buy.component.html
+++ b/src/app/dialog/buy/buy.component.html
@@ -2,5 +2,5 @@
 <span mat-dialog-title>Are you sure want purchase ?</span>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="1">Ok</button>
+  <button mat-button (click) = "onYesClick()"[mat-dialog-close]="1">Ok</button>
 </div>
