--- a/src/app/adminPage/new-product/new-product.component.html
+++ b/src/app/adminPage/new-product/new-product.component.html
@@ -14,6 +14,9 @@
           type="text"
           formControlName="productName"
         />
+        <mat-error *ngIf="profileForm.get('productName')"
+          >Product Name invalid</mat-error
+        >
       </mat-form-field>
 
       <label>
@@ -27,6 +30,9 @@
           type="text"
           formControlName="description"
         />
+        <mat-error *ngIf="profileForm.get('description')"
+          >Description invalid</mat-error
+        >
       </mat-form-field>
 
       <label>
@@ -40,6 +46,9 @@
           type="string"
           formControlName="productImage"
         />
+        <mat-error *ngIf="profileForm.get('productImage')"
+          >Product Image invalid</mat-error
+        >
       </mat-form-field>
 
       <label>
@@ -53,6 +62,9 @@
           type="string"
           formControlName="Category"
         />
+        <mat-error *ngIf="profileForm.get('Category')"
+          >Category invalid</mat-error
+        >
       </mat-form-field>
 
       <label>
