--- a/src/app/adminPage/product-list/product-list.component.html
+++ b/src/app/adminPage/product-list/product-list.component.html
@@ -39,10 +39,10 @@
         <td mat-cell *matCellDef="let element">{{ element.Category }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="Description">
+      <!-- <ng-container matColumnDef="Description">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-      </ng-container>
+      </ng-container> -->
 
       
 
